--- a/curriculum/level-1/1208-css-grid-practice/styles.css
+++ b/curriculum/level-1/1208-css-grid-practice/styles.css
@@ -7,12 +7,8 @@
 
 .container {
     display: grid;
-    grid-template-columns: repeat(2, auto);
-    /* grid-template-rows: repeat(3, auto); */
-}
-
-.row-1 {
-    width: 100%;
+    grid-template-columns: repeat(4, auto);
+    grid-template-rows: repeat(3, auto);
 }
 
 .block-1 {
@@ -21,6 +17,7 @@
     background-color: red;
     border-radius: 15px;
     border: 10px solid white;
+    grid-column: 1/3;
 }
 
 .block-2 {
@@ -28,9 +25,268 @@
     background-color: blue;
     border-radius: 15px;
     border: 10px solid white;
+    grid-column: 3/5;
+}
+
+.block-3 {
+    width: 100%;
+    height: 100px;
+    background-color: green;
+    border-radius: 15px;
+    border: 10px solid white;
+    grid-column: 1/2;
+}
+
+.block-4 {
+    width: 100%;
+    height: 100px;
+    background-color: purple;
+    border-radius: 15px;
+    border: 10px solid white;
+    grid-column: 2/5;
+}
+
+.block-5 {
+    width: 100%;
+    height: 100px;
+    background-color: yellow;
+    border-radius: 15px;
+    border: 10px solid white;
+    grid-column: 1/5;
 }
 
 
+/* 2nd image */
+
+/* * {
+    box-sizing: border-box;
+    font-size: 0px;
+}
+
+.container {
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    grid-template-rows: repeat(3, auto);
+}
+
+.block-1 {
+    width: 100%;
+    height: 200px;
+    background-color: red;
+    border-radius: 15px;
+    border: 10px solid white;
+    grid-column: 1/5;
+}
+
+.block-2 {
+    width: 100%;
+    background-color: blue;
+    border-radius: 15px;
+    border: 10px solid white;
+    grid-column: 1/3;
+    grid-row: 2/5;
+}
+
+.block-3 {
+    width: 100%;
+    height: 200px;
+    background-color: green;
+    border-radius: 15px;
+    border: 10px solid white;
+    grid-column: 3/5;
+}
+
+.block-4 {
+    width: 100%;
+    height: 200px;
+    background-color: purple;
+    border-radius: 15px;
+    border: 10px solid white;
+    grid-column: 3/5;
+}
+
+.block-5 {
+    width: 100%;
+    height: 200px;
+    background-color: purple;
+    border-radius: 15px;
+    border: 10px solid white;
+    grid-column: 3/5;
+} */
 
 
+/* mobile style - iPhoneSE, Tablet - iPad Air, Laptop - Laptop M  */
 
+@media only screen and (max-width: 375px) {
+    .container {
+        display: grid;
+        grid-template-columns: repeat(1, auto);
+        grid-template-rows: repeat(5, auto);        
+    }
+    
+    .block-1 {
+        width: 100%;
+        height: 100px;
+        background-color: red;
+        border-radius: 15px;
+        border: 10px solid white;
+        grid-row: 1/1;
+        grid-column: 1/5;
+    }
+    
+    .block-2 {
+        width: 100%;
+        height: 100px;
+        background-color: blue;
+        border-radius: 15px;
+        border: 10px solid white;
+        grid-row: 2/2;
+        grid-column: 1/5;
+    }
+    
+    .block-3 {
+        width: 100%;
+        height: 100px;
+        background-color: green;
+        border-radius: 15px;
+        border: 10px solid white;
+        grid-row: 3/3;
+        grid-column: 1/5;
+    }
+    
+    .block-4 {
+        width: 100%;
+        height: 100px;
+        background-color: purple;
+        border-radius: 15px;
+        border: 10px solid white;
+        grid-row: 4/4;
+        grid-column: 1/5;
+    }
+    
+    .block-5 {
+        width: 100%;
+        height: 100px;
+        background-color: yellow;
+        border-radius: 15px;
+        border: 10px solid white;
+        grid-row: 5/5;
+        grid-column: 1/5;
+    }
+}
+
+@media only screen and (Min-width:376px) and (max-width: 1024px) {
+    .container {
+        display: grid;
+        grid-template-columns: repeat(1, auto);
+        grid-template-rows: repeat(4, auto);        
+    }
+    
+    .block-1 {
+        width: 100%;
+        height: 100px;
+        background-color: red;
+        border-radius: 15px;
+        border: 10px solid white;
+        grid-row: 1/1;
+        grid-column: 1/5;
+    }
+    
+    .block-2 {
+        width: 100%;
+        height: 100px;
+        background-color: blue;
+        border-radius: 15px;
+        border: 10px solid white;
+        grid-row: 2/3;
+        grid-column: 1/2;
+    }
+    
+    .block-3 {
+        width: 100%;
+        height: 100px;
+        background-color: green;
+        border-radius: 15px;
+        border: 10px solid white;
+        grid-column: 2/5;
+        grid-row: 2/2;
+    }
+    
+    .block-4 {
+        width: 100%;
+        height: 100px;
+        background-color: purple;
+        border-radius: 15px;
+        border: 10px solid white;
+        grid-row: 3/3;
+        grid-column: 1/5;
+    }
+    
+    .block-5 {
+        width: 100%;
+        height: 100px;
+        background-color: yellow;
+        border-radius: 15px;
+        border: 10px solid white;
+        grid-row: 4/4;
+        grid-column: 1/5;
+    }
+}
+
+@media only screen and (min-width: 1024px) and (max-width: 1366px) {
+    .container {
+        display: grid;
+        grid-template-columns: repeat(1, auto);
+        grid-template-rows: repeat(3, auto);        
+    }
+    
+    .block-1 {
+        width: 100%;
+        height: 100px;
+        background-color: red;
+        border-radius: 15px;
+        border: 10px solid white;
+        grid-row: 1/1;
+        grid-column: 1/5;
+    }
+    
+    .block-2 {
+        width: 100%;
+        height: 100px;
+        background-color: blue;
+        border-radius: 15px;
+        border: 10px solid white;
+        grid-row: 2/2;
+        grid-column: 1/2;
+    }
+    
+    .block-3 {
+        width: 100%;
+        height: 100px;
+        background-color: green;
+        border-radius: 15px;
+        border: 10px solid white;
+        grid-row: 2/2;
+        grid-column: 2/4;
+    }
+    
+    .block-4 {
+        width: 100%;
+        height: 100px;
+        background-color: purple;
+        border-radius: 15px;
+        border: 10px solid white;
+        grid-row: 2/2;
+        grid-column: 4/5;
+    }
+    
+    .block-5 {
+        width: 100%;
+        height: 100px;
+        background-color: yellow;
+        border-radius: 15px;
+        border: 10px solid white;
+        grid-row: 3/3;
+        grid-column: 1/5;
+    }
+}
